tests/machine/x/st/map_membership.out
Object: 'a' error: did not understand #in
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #in (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/map_membership.st:5)
Object: 'c' error: did not understand #in
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #in (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/map_membership.st:6)