tests/machine/x/st/map_membership.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:58Z
"
| m |
m := Dictionary from:{'a'->1. 'b'->2}.
Transcript show: (('a' in m)) printString; cr.
Transcript show: (('c' in m)) printString; cr.
